# micro-cnn

./: CMakeLists.txt  Projects.code-workspace  platformio.ini  readme.md  sdkconfig.esp32doit-devkit-v1
OLD-lib/tflite-lib/tensorflow/lite/micro/kernels/: add.cc
bank_images/sample_images/: defeito (704).raw  image256  python-704.raw
lib/screen/: CMakeLists.txt
lib/tflite-lib/: CMakeLists.txt
lib/tflite-lib/tensorflow/lite/micro/kernels/: add.cc  conv.cc  depthwise_conv.cc
lib/tflite-lib/tensorflow/lite/micro/kernels/esp_nn/: conv.cc
src/: CMakeLists.txt  detection_responder.cc  esp_cli.c  esp_cli.h  esp_main.h  images.cc  images.h  main.cc  main_functions.cc  main_functions.h  model_data.cc  model_data.h  model_settings.cc  model_settings.h  person_detect_model_data.cc
src/static_images/: CMakeLists.txt
static_images/: 256-i705.txt  CMakeLists.txt
static_images/sample_images/: 256-704.raw  256-706.raw  i704.txt  image.txt  image1
