
#
# Main component of TF Micro project 'person_detection'.
#

idf_component_register(
    EMBED_FILES 
                "sample_images/image0" 
                "sample_images/image1" 
                # "sample_images/image2" 
                # "sample_images/image3"
                # "sample_images/image4" 
                # "sample_images/image5" 
                # "sample_images/image6" 
                # "sample_images/image7"
                # "sample_images/image8" 
                # "sample_images/image9"
    SRCS ""
    INCLUDE_DIRS ""            
                )
